# KB-multi-agent

./: .dockerignore  DOCKER.md  PROJECT-STRUCTURE.md  README.md  STARTUP.md  check-health.bat  check-health.ps1  check-lint.js  diagnose-backend.ps1  docker-compose.override.yml  docker-compose.yml  fix-lint.js  fix-poetry.ps1  package.json  pnpm-lock.yaml  project-structure.sql  run-build.js  simple-check.ps1  start-all.bat  start-all.ps1  start-app.ps1  stop-app.ps1
agent/: .dockerignore  Dockerfile  LOGFIRE.md  check_sdk.py  example.env  knowledge_server.py  langgraph.json  pyproject.toml  run_autoflake.py  test_framework_integration.py  test_knowledge_server.py  test_server.py
agent/mcp_agent/: __init__.py  agent.py  agent_factory.py  api.py  custom_server.py  custom_server_entry.py  database_status.py  health_server.py  langgraph.json  langgraph_server.py  logging.py  mock_agents.py  mock_graph.py  run_server.py  shared_state.py  test_agent_factory.py  test_graphiti_integration.py
agent/mcp_agent/adapters/: README.md  README_OPENAI_AGENTS.md  __init__.py  langgraph_adapter.py  openai_adapter.py  openai_agents_sdk.py  tool_adapters.py
agent/mcp_agent/api/: __init__.py  agent_endpoints.py  framework_endpoints.py
agent/mcp_agent/database/: agent_service.py  conversation_service.py  init_db.py  service.py  supabase_service.py
agent/mcp_agent/integrations/: README_REDIS.md  __init__.py  a2a_integration.py  a2a_protocols.py  base_memory.py  graphiti_integration.py  litellm_integration.py  litellm_integration.py.new  (+7 more)
agent/prisma/: schema.prisma
(+170 files in other folders)
